Killed the mobile scrolling issue and squashed the bug.

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,8 +1,4 @@
 body {
-	display: block;
-	position: relative;
-	margin: 0;
-	width: 100%;
 	max-width: 1350px;
 	background-color: #202124;
 	overflow-x: hidden;
